apps/speedtest-tracker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest-tracker
  namespace: apps
  labels:
    app.kubernetes.io/name: speedtest-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speedtest-tracker
  template:
    metadata:
      labels:
        app: speedtest-tracker
        app.kubernetes.io/name: speedtest-tracker
    spec:
      containers:
        - name: speedtest-tracker
          image: lscr.io/linuxserver/speedtest-tracker:1.13.10
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /config
          startupProbe:
            tcpSocket:
              port: 80
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 15
          livenessProbe:
            tcpSocket:
              port: 80
            periodSeconds: 30
            failureThreshold: 3
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
      volumes:
        - name: config
          emptyDir: {}
